--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,52 @@
 * {
  margin: 0;
+ box-sizing: border-box;
+}
+
+.container {
+     width: 100vw;
+     height: 100vh;
+     padding: 10px 40px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-wrap: wrap;
+     gap: 40px;
 }
 
 canvas {
-     cursor: grab;
+     cursor: pointer;
+}
+
+.nft-card {
+     position: relative;
+     width: 300px;
+     height: 500px;
+     padding: 20px 10px;
+     background: #f2d4ed;
+     border-radius: 8px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+}
+
+.nft-card canvas {
+     width: calc(100% - 10%);
+     height: 400px;
+     border-radius: 9px;
+     box-shadow: 0 3px 4px rgba(0,0,0,0.2)
+}
+
+.nft-card-name {
+     font-size: 20px;
+     font-weight: 600;
+     margin-top: 20px;
+}
+
+.gradient-bar {
+    margin-top: 10px;
+    width: 80%;
+    height: 5px;
+    background: rgb(252,137,162);
+background: linear-gradient(270deg, rgba(252,137,162,1) 0%, rgba(183,226,168,1) 90%);
 }
